--- a/package.json
+++ b/package.json
@@ -66,5 +66,8 @@
   },
   "dependencies": {
     "jszip": "^3.10.1"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.6.1"
   }
 }
